--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>Portfolio</title>
     <script>
       if (
-        localStorage.getItem('color-theme') === 'light' ||
-        (!('color-theme' in localStorage) &&
-          window.matchMedia('(prefers-color-scheme: light)').matches)
+        (localStorage.getItem('theme') === 'dark') ||
+        (window.matchMedia('(prefers-color-scheme: dark)').matches)
       ) {
-        document.documentElement.classList.add('light');
+        document.documentElement.classList.add('dark');
       } else {
-        document.documentElement.classList.remove('light');
+        document.documentElement.classList.add('light');
       }
     </script>
   </head>
